--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "express-session": "^1.17.1",
+    "heroku": "^7.59.1",
     "http-errors": "~1.6.3",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
